--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd38af9d",
+   "id": "16c0da00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2435369",
+   "id": "3b128acf",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "79428b74",
+   "id": "f65f89bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9f67b38",
+   "id": "3eaf8867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9aace514",
+   "id": "68459073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b737e4e1",
+   "id": "7a2807d1",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a8fda2b",
+   "id": "e0bca48d",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1d72a3bc",
+   "id": "e2612d34",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cd0b4900",
+   "id": "dd48ab7c",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a53303a2",
+   "id": "da78ecaa",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e73e885",
+   "id": "567ac8ff",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4e07b5f7",
+   "id": "a35a9236",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d46ed372",
+   "id": "b50944c0",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b62a0a8f",
+   "id": "e5d51e75",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "03edd645",
+   "id": "a25d4fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "90ee4a99",
+   "id": "6e0907ab",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "317613ac",
+   "id": "af8d071c",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1c9a872a",
+   "id": "f82fff0e",
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +414,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "097a27cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'02/08/22'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "53560cbe",
+   "id": "3c410cbd",
    "metadata": {},
    "outputs": [],
    "source": []
